[package]
name = "pallet-htlc"
version = "2.0.0"
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
edition = "2018"

[dependencies]
# 3rd party
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }

# primitives
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

# frame modules
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"

primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git", branch = "master" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "runtime-io/std",
    "sr-primitives/std",
    "support/std",
    "system/std",
]
