[package]
name = "pallet-htlc"
version = "2.0.0"
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
edition = "2018"

[dependencies]
# 3rd party
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }

# primitives
rstd = { package = "sp-std", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
runtime-io = { package = "sp-io", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

# frame modules
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

[dev-dependencies]
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate.git", branch = "master" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "master" }

[patch."https://github.com/paritytech/substrate.git"]
rstd = { package = "sp-std", path = "../substrate-master/primitives/sr-std", default-features = false }
runtime-io = { package = "sp-io", path = "../substrate-master/primitives/sr-io", default-features = false }
sp-runtime = { path = "../substrate-master/primitives/sr-primitives", default-features = false }

support = { package = "frame-support", path = "../substrate-master/frame/support", default-features = false }
system = { package = "frame-system", path = "../substrate-master/frame/system", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "runtime-io/std",
    "sp-runtime/std",
    "support/std",
    "system/std",
]
